--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,13 +9,29 @@ body {
 button {
   background-color: #ffffff;
   border-radius: 26px;
-  padding: 12px 30px;
+  padding: 10px 41px 10px 30px;
   border: 1px solid $text-green;
   display: flex;
   .letter {
     color: $text-green;
     font-family: 'proximanova_bold', sans-serif;
     line-height: 19.49px;
+  }
+  .small-letter {
+    font-family: 'proximanova_light', sans-serif;
+    color: $text-green;
+    font-size: 14px;
+    line-height: 17.05px;
+  }
+  .sign-up {
+    font-size: 14px;
+    line-height: 14px;
+    width: 102px;
+    color: $text-color;
+    padding-left: 10px;
+  }
+  p {
+    margin: auto;
   }
 }
 
@@ -40,7 +56,18 @@ button {
     padding-right: 10px;
   }
   .city {
+    font-family: 'proximanova_light', sans-serif;
     color: #37454A99;
+  }
+  .phone {
+    font-family: 'proximanova_bold', sans-serif;
+    font-size: 18px;
+    line-height: 30px;
+    color: $text-color;
+  }
+  #border-rigth {
+    border-right: 1px solid $bg-light-grey;
+    padding-right: 5px;
   }
 }
 
