--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -80,7 +80,6 @@ button {
   .icon-basket {
     color: $text-color;
     font-size: 28px;
-    position: relative;
   }
   .amount {
     background-color: $text-green;
@@ -89,9 +88,22 @@ button {
     color: $white;
     padding: 6px 10px;
     border-radius: 25px;
-    position: absolute;
-    top: 23px;
-    right: 87px;
+    margin-left: -10px;
+    top: -20px;
+  }
+  .amount_heart {
+    background-color: $text-green;
+    font-size: 12px;
+    line-height: 14.62px;
+    color: $white;
+    padding: 6px 10px;
+    border-radius: 25px;
+    margin-left: -30px;
+    top: -20px;
+  }
+  .border-right {
+    border-right: 1px solid $bg-light-grey;
+    height: 100px;
   }
 }
 
