--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,7 @@
 $bg-bottom-nav: #6EB744;
 $bg-light-grey: #F4F4F4;
 $text-color: #37454A;
+$text-color-opacity: #37454A99; 
 $text-green: #76B926;
+$text-green-hover: #82d819;
 $white: #ffffff;
