--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,6 +3,8 @@
 body {
   color: black;
   font-family: 'proximanova_regular', sans-serif;
+  font-size: 16px;
+  line-height: 22px;
   margin: auto;
 }
 
@@ -50,10 +52,16 @@ button {
     color: $text-green;
   }
   .location {
-    font-family: 'proximanova_bold', sans-serif;
-    color: $text-green;
     border-right: 1px solid #DFDFDF;
     padding-right: 10px;
+    a {
+      font-family: 'proximanova_bold', sans-serif;
+      color: $text-green;
+      text-decoration: none;
+    }
+    a:hover {
+      color: $text-green-hover;
+    }
   }
   .city {
     font-family: 'proximanova_light', sans-serif;
@@ -66,65 +74,109 @@ button {
     color: $text-color;
   }
   .call-back {
-    color: $text-green;
-    font-size: 14px;
-    line-height: 14px;
-    display: inline;
-    border-bottom: 1px dashed $text-green;
+    a {
+      color: $text-green;
+      text-decoration: none;
+      font-size: 14px;
+      line-height: 14px;
+      display: inline;
+      border-bottom: 1px dashed $text-green;
+    }
+    a:hover {
+      color: $text-green-hover;
+    }
   }
-  .icon-heart {
-    color: #E34C4C;
-    font-size: 24px;
-    padding-right: 20px;
+  a {
+    text-decoration: none;
+    .icon-heart {
+      color: #E34C4C;
+      font-size: 24px;
+      padding-right: 20px;
+    }
+    .icon-basket {
+      color: $text-color;
+      font-size: 28px;
+    }
+    .amount {
+      background-color: $text-green;
+      font-size: 12px;
+      line-height: 14.62px;
+      color: $white;
+      padding: 6px 10px;
+      border-radius: 25px;
+      margin-left: -10px;
+      top: -20px;
+    }
+    .amount_heart {
+      background-color: $text-green;
+      font-size: 12px;
+      line-height: 14.62px;
+      color: $white;
+      padding: 6px 10px;
+      border-radius: 25px;
+      margin-left: -30px;
+      top: -20px;
+    }
   }
-  .icon-basket {
-    color: $text-color;
-    font-size: 28px;
-  }
-  .amount {
-    background-color: $text-green;
-    font-size: 12px;
-    line-height: 14.62px;
-    color: $white;
-    padding: 6px 10px;
-    border-radius: 25px;
-    margin-left: -10px;
-    top: -20px;
-  }
-  .amount_heart {
-    background-color: $text-green;
-    font-size: 12px;
-    line-height: 14.62px;
-    color: $white;
-    padding: 6px 10px;
-    border-radius: 25px;
-    margin-left: -30px;
-    top: -20px;
-  }
-  .border-right {
-    border-right: 1px solid $bg-light-grey;
-    height: 100px;
-  }
+}
+
+.border-right {
+  border-right: 1px solid $bg-light-grey;
+  height: 100px;
 }
 
 .main-nav {
   background-color: $bg-bottom-nav;
   display: flex;
-  a {
-    text-decoration: none;
-  }
   &_menu {
     list-style: none;
     padding: 0;
     display: flex;
+    margin-top: 16px;
     li {
       margin-right: 30px;
+      border-right: 1px solid rgb(55, 69, 74, 0.2);
+      padding-right: 28px;
     }
+    li:last-child {
+      border-right: none
+    }
+    a {
+      text-decoration: none;
+      color: $white;
+    }
+    /*a::after {
+      content: '|';
+      color: $text-color;
+      padding-left: 28px;
+      opacity: 20%;
+    }*/
+    a:hover {
+      color: $text-color;
+    }
+    /*li:last-child a::after {
+      display: none;
+    }*/
   }
   .search {
     background-color: #62A53C;
-    height: 43px;
-    padding: 8px;
+    padding: 15px 20px;
+    width: 150px;
+  }
+}
+
+.footer {
+  &_text {
+    font-family: 'proximanova_bold', sans-serif;
+    font-size: 18px;
+    line-height: 21.92px;
+    color: $text-color;
+  }
+  &_social {
+    font-size: 16px;
+    font-family: 'proximanova_bold', sans-serif;
+    line-height: 22px;
+    color: $text-color;
   }
 }
 
