--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -166,6 +166,11 @@ button {
 }
 
 .footer {
+  border-top: 1px solid $bg-light-grey;
+  box-shadow: 0px -2px $bg-light-grey-shadow;
+  p {
+    margin-top: 25px;
+  }
   &_text {
     font-family: 'proximanova_bold', sans-serif;
     font-size: 18px;
@@ -173,10 +178,49 @@ button {
     color: $text-color;
   }
   &_social {
+    display: flex;
     font-size: 16px;
     font-family: 'proximanova_bold', sans-serif;
     line-height: 22px;
     color: $text-color;
+    a {
+      display: contents;
+    }
+    img {
+      width: auto;
+      margin-left: 15px;
+      background-color: $bg-light-grey;
+      border-radius: 35px;
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+    .fb {
+      padding-right: 25px;
+      padding-left: 25px;
+    }
+  }
+  .forma-sign {
+    display: flex;
+  }
+  .sign {
+    color: $white;
+    background-color: $bg-bottom-nav;
+    margin-left: 15px;
+  }
+  input {
+    border-radius: 26px;
+    padding: 10px;
+    border: 1px solid $text-green;
+    color: $text-color;
+    text-align: center;
+  }
+}
+
+.footer-nav {
+  background-color: $bg-light-grey;
+  .contact {
+    border-right: 1px solid $border-light-grey;
+    padding-right: 10px;
   }
 }
 
