--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -5,4 +5,7 @@ $border-light-grey: #DFDFDF;
 $text-color: #37454A; 
 $text-green: #76B926;
 $text-green-hover: #82d819;
+$header-green: #76B72A;
 $white: #ffffff;
+$black: #000000;
+$text-footer: rgba(55, 69, 74, 0.6);
