--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,7 +1,7 @@
 @import "colors";
 
 body {
-  color: black;
+  color: $text-color;
   font-family: 'proximanova_regular', sans-serif;
   font-size: 16px;
   line-height: 22px;
@@ -40,6 +40,7 @@ button {
 .upper-nav {
   font-size: 16px;
   line-height: 22px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.01);
   &_logo {
     border-right: 1px solid $bg-light-grey;
     padding-right: 10px;
@@ -120,6 +121,49 @@ button {
   }
 }
 
+header {
+  background-color: $bg-light-grey;
+  .breadcrumbs {
+    padding-top: 20px;
+    color: $text-color;
+    .icon-home-outline {
+      color: $text-green;
+      font-size: 14px;
+    }
+    .icon-right-open-outline {
+      font-size: 10px;
+    }
+    a {
+      color: $text-footer;
+      text-decoration: none;
+    }
+    a:hover {
+      color: $text-green-hover;
+    }
+  }
+  h1 {
+    padding-top: 30px;
+    font-family: 'proximanova_bold', sans-serif;
+    span {
+      color: $header-green;
+    }
+  }
+  p {
+    padding-top: 30px;
+    color: $text-footer;
+  }
+  .header_text {
+    color: $text-color;
+    font-style: italic;
+    padding-top: 10px;
+  }
+  button {
+    margin-top: 30px;
+    text-transform: uppercase;
+    line-height: 25px;
+  }
+}
+
 .border-right {
   border-right: 1px solid $bg-light-grey;
   height: 100px;
@@ -161,7 +205,7 @@ button {
   .search {
     background-color: #62A53C;
     padding: 15px 20px;
-    width: 150px;
+    width: 250px;
   }
 }
 
@@ -218,9 +262,53 @@ button {
 
 .footer-nav {
   background-color: $bg-light-grey;
-  .contact {
+  color: $text-color;
+  padding-bottom: 65px;
+  h4 {
+    font-family: 'proximanova_bold', sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+  }
+  p {
+    color: $text-footer;
+    font-size: 14px;
+    line-height: 25px;
+    margin: 0px;
+  }
+  .border-footer-right {
     border-right: 1px solid $border-light-grey;
-    padding-right: 10px;
+    height: 290px;
+    margin-right: 30px;
+    width: auto;
+  }
+  .border-footer-top {
+    border-top: 1px solid $border-light-grey;
+    padding-top: 20px;
+    margin-top: 10px;
+    color: $text-footer;
+    font-size: 14px;
+  }
+  .contact {
+    a {
+      display: block;
+      color: $text-footer;
+      text-decoration-color: $border-light-grey;
+      padding-bottom: 10px;
+    }
+  }
+}
+
+.footer-rights {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  color: $text-footer;
+  font-size: 14px;
+  line-height: 20px;
+  a {
+    color: $text-footer;
+  }
+  p {
+    font-family: 'Montserrat', sans-serif;
   }
 }
 
