--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -189,24 +189,43 @@ header {
       text-decoration: none;
       color: $white;
     }
-    /*a::after {
-      content: '|';
-      color: $text-color;
-      padding-left: 28px;
-      opacity: 20%;
-    }*/
     a:hover {
       color: $text-color;
     }
-    /*li:last-child a::after {
-      display: none;
-    }*/
   }
   .search {
     background-color: #62A53C;
     padding: 15px 20px;
     width: 250px;
   }
+}
+
+.advatages {
+  .check_green {
+    margin-top: 30px;
+    background: linear-gradient(270deg, #82CA2C, #6CB644,);
+    box-shadow: 0px 10px 20px rgba(132, 199, 55, 0.09);
+    color: $white;
+    text-transform: uppercase;
+    font-family: 'proximanova_bold', sans-serif;
+    display: flex;
+    align-items: center;
+    border-radius: 35px;
+    padding: 24px 11px 24px 30px;
+    i {
+      background-color: $white;
+      border-radius: 35px;
+      padding-right: 20px;
+      padding-left: 20px;
+      margin-left: 20px;
+      font-size: 16px;
+      color: $text-footer;
+    }
+  }
+}
+
+.text-area {
+  margin-top: 60px;
 }
 
 .footer {
