--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,7 +12,7 @@ h3, h5 {
   font-family: 'proximanova_bold', sans-serif;
 }
 
-ul {
+ul, ol {
   font-size: 18px;
   line-height: 30px;
 }
@@ -43,6 +43,43 @@ button {
   }
   p {
     margin: auto;
+  }
+}
+
+input {
+  border-radius: 26px;
+  padding: 10px;
+  border: 1px solid $text-green;
+  color: $text-color;
+  text-align: center;
+}
+
+.sign {
+  color: $white;
+  background-color: $bg-bottom-nav;
+  margin-left: 15px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.check_green {
+  margin-top: 30px;
+  background: linear-gradient(270deg, #82CA2C, #6CB644,);
+  box-shadow: 0px 10px 20px rgba(132, 199, 55, 0.09);
+  color: $white;
+  text-transform: uppercase;
+  font-family: 'proximanova_bold', sans-serif;
+  display: flex;
+  align-items: center;
+  border-radius: 35px;
+  padding: 10px 11px 10px 30px;
+  i {
+    background-color: $white;
+    border-radius: 35px;
+    padding: 10px;
+    margin-left: 20px;
+    font-size: 16px;
+    color: $text-footer;
   }
 }
 
@@ -231,38 +268,35 @@ header {
   &_icon {
     margin-bottom: -50px;
   }
-  .check_green {
-    margin-top: 30px;
-    background: linear-gradient(270deg, #82CA2C, #6CB644,);
-    box-shadow: 0px 10px 20px rgba(132, 199, 55, 0.09);
-    color: $white;
-    text-transform: uppercase;
-    font-family: 'proximanova_bold', sans-serif;
-    display: flex;
-    align-items: center;
-    border-radius: 35px;
-    padding: 10px 11px 10px 30px;
-    i {
-      background-color: $white;
-      border-radius: 35px;
-      padding: 10px;
-      margin-left: 20px;
-      font-size: 16px;
-      color: $text-footer;
-    }
-  }
 }
 
 .slider {
   background-color: $bg-light-grey;
+  &_shadow {
+    border-radius: 8px;
+    border: 1px solid $border-light-grey;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  &_text {
+    color: $text-footer;
+  }
   .description {
     background-color: $white;
     height: 151px;
+    border-radius: 0px 0px 8px 8px;
   }
 }
 
-.text-area {
-  margin-top: 60px;
+.check-up {
+  &_bg {
+    background-color: $bg-light-grey;
+    border-radius: 20px;
+    border: 1px solid $border-light-grey;
+  }
+  &_text {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
 
 .footer {
@@ -301,18 +335,6 @@ header {
   }
   .forma-sign {
     display: flex;
-  }
-  .sign {
-    color: $white;
-    background-color: $bg-bottom-nav;
-    margin-left: 15px;
-  }
-  input {
-    border-radius: 26px;
-    padding: 10px;
-    border: 1px solid $text-green;
-    color: $text-color;
-    text-align: center;
   }
 }
 
@@ -366,6 +388,40 @@ header {
   p {
     font-family: 'Montserrat', sans-serif;
   }
+}
+
+/*Checkbox*/
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-checkbox+label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+}
+
+.custom-checkbox+label::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.custom-checkbox:checked+label::before {
+  border-color: $text-green;
+  background-color: $text-green;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
 
